--- a/iindex.html
+++ b/iindex.html
@@ -87,7 +87,7 @@
             }
         }
 
-        #saldos-gerais {
+        #saldo-geral {
             background: linear-gradient(to right, #c3d9f7, #0066cc);
             border: 1px solid #00449e;
             border-radius: 8px;
@@ -96,13 +96,13 @@
             margin-top: 20px;
         }
 
-        #saldos-gerais table {
+        #saldo-geral table {
             width: 100%;
             margin: 10px;
             border-collapse: collapse;
         }
 
-        #saldos-gerais th, #saldos-gerais td {
+        #saldo-geral th, #saldos-gerais td {
             padding: 10px;
             text-align: center;
             border-bottom: 1px solid #0066cc;
@@ -154,8 +154,8 @@
 
         <div class="col-md-3">
             <div id="ranking" class="mt-4 animate"></div>
-            <div id="saldos-gerais" class="mt-4 animate">
-                <h2>Saldos Gerais</h2>
+            <div id="saldo-geral" class="mt-4 animate">
+                <h2>Saldo Geral</h2>
                 <table>
                     <tr>
                         <th>Saldo</th>
