--- a/iindex.html
+++ b/iindex.html
@@ -106,7 +106,7 @@
             padding: 10px;
             text-align: center;
             border-bottom: 1px solid #0066cc;
-            color: #ffffff;
+            color: black;
         }
 
         #ranking {
