--- a/iindex.html
+++ b/iindex.html
@@ -59,7 +59,7 @@
 
         th {
             background-color: #00449e;
-            color: #ffffff;
+            color: #f;
         }
 
         .small-input {
@@ -102,7 +102,7 @@
             border-collapse: collapse;
         }
 
-        #saldo-geral th, #saldos-gerais td {
+        #saldo-geral th, #saldos-geral td {
             padding: 10px;
             text-align: center;
             border-bottom: 1px solid #0066cc;
