--- a/iindex.html
+++ b/iindex.html
@@ -59,7 +59,7 @@
 
         th {
             background-color: #00449e;
-            color: #f;
+            color: #ffffff;
         }
 
         .small-input {
