--- a/iindex.html
+++ b/iindex.html
@@ -108,6 +108,34 @@
             border-bottom: 1px solid #0066cc;
             color: black;
         }
+        .container {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Ajuste conforme necessário */
+}
+
+.botao-redirecionar {
+  position: absolute;
+  top: 50%; /* Posição vertical */
+  left: 50%; /* Posição horizontal */
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  border: 2px solid #333; /* Cor e espessura da borda */
+  border-radius: 5px; /* Borda arredondada */
+  overflow: hidden; /* Garante que a borda se ajuste à imagem */
+  transition: transform 0.3s ease; /* Adiciona uma animação de transição */
+}
+
+.botao-redirecionar:hover {
+  transform: scale(1.1); /* Aumenta o tamanho do botão ao passar o mouse sobre ele */
+}
+
+.botao-redirecionar img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 
         #ranking {
             background: linear-gradient(to right, #bed3ee, #0066cc);
@@ -166,6 +194,11 @@
                 </table>
             </div>
         </div>
+        <div class="container">
+    <a href="https://gabrieldesenvolvedor.github.io/indexcontrole.html/controle%20de%20produtos/controle%20de%20produtos%20-%20ABRIR.html" class="botao-redirecionar">
+      <img src="./assets/Captura de tela 2024-02-04 065241.png" alt="Nome da Página">
+    </a>
+  </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
