--- a/iindex.html
+++ b/iindex.html
@@ -114,10 +114,11 @@
   height: 100vh; /* Ajuste conforme necessário */
 }
 
-.botao-redirecionar {
+botao-redirecionar {
+    width: 70px;
   position: absolute;
-  top: 50%; /* Posição vertical */
-  left: 50%; /* Posição horizontal */
+  top: 1%; /* Posição vertical */
+  right: 160px; /* Posição horizontal */
   transform: translate(-50%, -50%);
   display: inline-block;
   border: 2px solid #333; /* Cor e espessura da borda */
@@ -125,6 +126,7 @@
   overflow: hidden; /* Garante que a borda se ajuste à imagem */
   transition: transform 0.3s ease; /* Adiciona uma animação de transição */
 }
+
 
 .botao-redirecionar:hover {
   transform: scale(1.1); /* Aumenta o tamanho do botão ao passar o mouse sobre ele */
