--- a/iindex.html
+++ b/iindex.html
@@ -108,14 +108,14 @@
             border-bottom: 1px solid #0066cc;
             color: black;
         }
-    .container {
+        .container {
   position: relative;
   width: 100%;
   height: 100vh; /* Ajuste conforme necessário */
 }
 
-botao-redirecionar {
-  width: 70px;
+.botao-redirecionar {
+ width: 70px;
   position: absolute;
   top: 1%; /* Posição vertical */
   right: 160px; /* Posição horizontal */
@@ -197,7 +197,7 @@ botao-redirecionar {
         </div>
         <div class="container">
     <a href="https://gabrieldesenvolvedor.github.io/indexcontrole.html/controle%20de%20produtos/controle%20de%20produtos%20-%20ABRIR.html" class="botao-redirecionar">
-      <img src="./assets/Captura de tela 2024-02-04 065241.png" alt="Nome da Página">
+      <img src="./assets/Captura de tela 2024-02-04 065241.png" alt="Controle de produtos">
     </a>
   </div>
     </div>
