--- a/iindex.html
+++ b/iindex.html
@@ -108,7 +108,7 @@
             border-bottom: 1px solid #0066cc;
             color: black;
         }
-        .container {
+               .container {
   position: relative;
   width: 100%;
   height: 100vh; /* Ajuste conforme necessário */
@@ -131,6 +131,11 @@
   transform: scale(1.1); /* Aumenta o tamanho do botão ao passar o mouse sobre ele */
 }
 
+.botao-redirecionar img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 .botao-redirecionar img {
   max-width: 100%;
   height: auto;
@@ -194,11 +199,12 @@
                     </tr>
                 </table>
             </div>
-        </div>
-        <div class="container">
+    <div class="container">
     <a href="https://gabrieldesenvolvedor.github.io/indexcontrole.html/controle%20de%20produtos/controle%20de%20produtos%20-%20ABRIR.html" class="botao-redirecionar">
       <img src="./assets/Captura de tela 2024-02-04 065241.png" alt="Controle de produtos">
+      
     </a>
+    
   </div>
     </div>
 
