--- a/iindex.html
+++ b/iindex.html
@@ -156,14 +156,14 @@
   display: block;
   margin-top: 5px; /* Adiciona uma margem superior para separar o texto da imagem */
   font-size: 14px; /* Ajusta o tamanho da fonte */
-  color: #333; /* Cor do texto */
+  color: #ffffff; /* Cor do texto */
   text-align: center; /* Centraliza o texto */
 }
 .oleo-granel {
   display: block;
   margin-top: 5px; /* Adiciona uma margem superior para separar o texto da imagem */
   font-size: 14px; /* Ajusta o tamanho da fonte */
-  color: #333; /* Cor do texto */
+  color: #ffffff; /* Cor do texto */
   text-align: center; /* Centraliza o texto */
 }
 
