--- a/iindex.html
+++ b/iindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela Individual de Quebra - Shell Style</title>
+    <title>Controle de Quebras</title>
     <link rel="icon" href="./assets/5a304f70-6b3c-4be6-8532-b79b13304435.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
